Set confirmed column to false and not null by default, fix in mailer view

--- a/app/views/signup_confirm_mailer/confirmation_email.html.erb
+++ b/app/views/signup_confirm_mailer/confirmation_email.html.erb
@@ -9,7 +9,7 @@
       You have successfully signed up to Project Turnip.
     </p>
     <p>
-      To confirm your registration, just follow this link: <a href=<%= @url%>>Click me!</a>
+      To confirm your registration, just follow this link: <a href="<%= @url%>">Click me!</a>
     </p>
     <p>Thanks for joining and have a great day!</p>
   </body>
